# SmartNamer

./: Makefile  README.md  smartnamer.cabal  std.bz  words.txt
src/: BitVector.hs  FileManager.hs  Main.hs  commandline.go  database.go  filemanager.go  folding.go  main.go  neuralnet.go  words.go
