name: smartnamer
version: 0.4
description: Use Machine Learning to Name Your Identifiers
author: Charles Rosenbauer
license: GPL
license-file: LICENSE
cabal-version: >=2.0
build-type: Simple

executable main
    default-language: Haskell2010
    main-is: Main.hs
    ghc-options: -dynamic -O2 -threaded +RTS -N8
    default-extensions: BangPatterns
    hs-source-dirs: src
    build-depends:
        base >= 4.7
      , haskeline >= 0.7
      , text >= 1.2
      , directory >= 1.3
      , filepath >= 1.4
      , hashable >= 1.2.6.1
      , parallel >= 3.2.1.1
      , regex-base >= 0.93.2
      , regex-pcre >= 0.94.4
    other-modules:
        BitVector
        FileManager

